<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.account.AccountFragment">

	<com.google.android.material.button.MaterialButton
		android:id="@+id/account_logoutButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="32dp"
		android:text="@string/sign_out"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/materialCardView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		app:cardCornerRadius="8dp"
		app:cardElevation="8dp"
		app:contentPadding="8dp"
		app:layout_constraintEnd_toEndOf="@+id/account_logoutButton"
		app:layout_constraintStart_toStartOf="@+id/account_logoutButton"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:text="@string/about_account" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toTopOf="@+id/account_nameText"
				app:layout_constraintTop_toTopOf="@+id/account_nameText">

				<ImageView
					android:id="@+id/imageView"
					android:layout_width="0dp"
					android:layout_height="59dp"
					android:scaleType="fitStart"
					android:src="@drawable/ic_account_circle_black_24dp"
					android:tint="@color/colorAccent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintDimensionRatio="w,1:1"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:layout_marginStart="8dp"
					android:gravity="center"
					android:orientation="vertical"
					app:layout_constraintBottom_toBottomOf="@+id/imageView"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@+id/imageView"
					app:layout_constraintTop_toTopOf="@+id/imageView">

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/account_nameText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="4dp"
						android:textSize="18sp" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/account_typeText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="4dp" />
				</LinearLayout>

			</androidx.constraintlayout.widget.ConstraintLayout>
		</LinearLayout>

	</com.google.android.material.card.MaterialCardView>

	<com.google.android.material.card.MaterialCardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		app:cardCornerRadius="8dp"
		app:cardElevation="8dp"
		app:contentPadding="8dp"
		app:layout_constraintEnd_toEndOf="@+id/materialCardView"
		app:layout_constraintStart_toStartOf="@+id/materialCardView"
		app:layout_constraintTop_toBottomOf="@+id/materialCardView">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:text="@string/password_change" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"
					android:text="@string/current_password"
					android:textAlignment="textEnd" />

				<EditText
					android:id="@+id/account_passwordCurrent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="textPassword" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"
					android:text="@string/new_password"
					android:textAlignment="textEnd" />

				<EditText
					android:id="@+id/account_passwordNew"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="textPassword" />
			</LinearLayout>

			<Button
				android:id="@+id/account_changeButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="16dp"
				android:text="@string/change_password" />

		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>